--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
 
         <provider
             android:authorities="com.example.yad.sunshine.app"
-            android:name=".data.WeatherProvider">
+            android:name=".data.WeatherProvider"
+            android:enabled="true"
+            android:exported="true">
 
         </provider>
     </application>
